sass/style.scss
/* ... */
.container-wrap {
  max-width: 1170px;
  margin: 0 auto;
}
#colorlib-main {
  width: calc(100% - 300px);
  float: right;
  @include transition(0.5s);
  @media screen and (max-width: $screen-sm) {
    width: 100%;
    padding: 0 1em;
  }
}

#colorlib-hero {
  min-height: 500px;
  background: $brand-white url("/images/loader.gif") no-repeat center center;
  width: 100%;
  float: left;
  margin-bottom: 10em;
  clear: both;

  @media screen and (max-width: $screen-sm) {
    width: calc(100% + 2em);
    margin-left: -1em;
    margin-right: -1em;
  }

  .flexslider {
    border: none;
    z-index: 1;
    margin-bottom: 0;

    .slides {
      position: relative;
      overflow: visible;
      li {
        background-repeat: no-repeat;
        background-size: cover;
        min-height: 400px;
        position: relative;
        animation: move-image 30s infinite;

        &:nth-child(1) {
          background: #fff url("/images/animated-shape.svg");
        }
        &:nth-child(2) {
          background: #fff url("/images/animated-shape-2.svg");
        }

        @keyframes move-image {
          0% {
            background-position: 0 50%;
          }
          50% {
            background-position: 100% 0;
          }
          100% {
            background-position: 0 50%;
          }
        }
      }
    }
    .flex-control-nav {
      bottom: 20px;
      z-index: 1000;
      left: 20px;
      float: left;
      width: auto;
      @media screen and(max-width: $screen-sm) {
        right: 20px;
        top: 100px;
      }
      li {
        display: block;
        margin-bottom: 10px;
        a {
          background: rgba(0, 0, 0, 0.5);
          box-shadow: none;
          width: 12px;
          height: 12px;
          cursor: pointer;
          &.flex-active {
            cursor: pointer;
            background: transparent;
            border: 2px solid $brand-primary;
          }
        }
      }
    }
    .flex-direction-nav {
      display: none;
    }
    .slider-text {
      display: table;
      opacity: 0;
      min-height: 500px;
      z-index: 9;
      > .slider-text-inner {
        display: table-cell;
        vertical-align: middle;
        min-height: 700px;
        padding: 2.5em;
        position: relative;
        @media screen and (max-width: $screen-sm) {
          text-align: center;
        }
        h1,
        h2 {
          margin: 0;
          padding: 0;
          color: rgba($brand-black, 1);
          font-family: $font-secondary;
        }
        h1 {
          margin-bottom: 20px;
          font-size: 60px;
          line-height: 1.3;
          font-weight: 700;
          text-shadow: 2px 2px 2px rgba($brand-bg-color, 0.6);
          @media screen and (max-width: $screen-sm) {
            font-size: 28px;
          }
        }
        h2 {
          font-size: 18px;
          line-height: 1.5;
          margin-bottom: 30px;
          font-weight: 300;
          font-family: $font-primary;
          a {
            color: rgba($brand-primary, 0.8);
            border-bottom: 1px solid rgba($brand-primary, 0.7);
          }
        }
        .heading-section {
          font-size: 50px;
          @media screen and (max-width: $screen-sm) {
            font-size: 30px;
          }
        }
        s .colorlib-lead {
          font-size: 20px;
          color: $brand-white;
        }
        p {
          margin-bottom: 0;
        }
        .btn {
          font-size: 12px;
          text-transform: uppercase;
          letter-spacing: 2px;
          color: $brand-black;
          padding: 10px 15px !important;
          border: none;
          font-weight: 400;
          &.btn-learn {
            border: 1px solid $brand-black;
            background: transparent !important;
            position: relative;
            &::before {
              content: "";
              position: absolute;
              left: 0;
              right: 100%;
              top: 0;
              bottom: 0;
              background: $brand-primary;
              transition: 300ms cubic-bezier(1, 0.48, 0, 0.55);
              z-index: -1;
            }
            &:hover {
              background: transparent !important;
              color: $brand-black;
              border: 1px solid $brand-black !important;
              &::before {
                right: 0;
                // bottom: 0;
              }
            }
          }
          @media screen and (max-width: $screen-sm) {
            width: 100%;
          }
        }
      }
    }
  }
}

body {
  &.offcanvas {
    overflow-x: hidden;
    #colorlib-aside {
      @include translateX(0);
      width: 300px;
      background: $brand-gray;
      z-index: 999;
      position: fixed;
    }
    #colorlib-main,
    .colorlib-nav-toggle {
      top: 0;
      @include translateX(300px);
    }
  }
}

.colorlib-narrow-content {
  padding: 0 2.5em;
  @media screen and(max-width: $screen-sm) {
    padding: 0;
  }
}
.no-gutters {
  margin: 0;
  padding: 0;
}

.colorlib-experience,
.colorlib-skills,
.colorlib-education,
.colorlib-blog,
.colorlib-work,
.colorlib-about,
.colorlib-services,
.colorlib-contact {
  padding-top: 4em;
  padding-bottom: 9em;
  clear: both;
  width: 100%;
  display: block;
  @media screen and(max-width: $screen-sm) {
    padding-top: 5em;
    padding-bottom: 8em;
  }
}

//COVER BG
.author-img {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative;
}

.colorlib-heading {
  font-size: 18px;
  margin-bottom: 4em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 5px;
  line-height: 1.8;
  position: relative;
  span {
    display: block;
  }
  @media screen and (max-width: $screen-sm) {
    margin-bottom: 3em;
  }
}
.heading-meta {
  margin-bottom: 15px;
  display: block;
  font-size: 10px;
  text-transform: uppercase;
  color: lighten($brand-black, 60%);
  font-weight: 500;
  letter-spacing: 5px;
}
/* ... */

